Fixed the positioning of the popover on mobile devices

--- a/components/_popover/popover.scss
+++ b/components/_popover/popover.scss
@@ -5,39 +5,50 @@ $arrow-size: 20px;
 
 .msds-popover {
   position: relative;
+  width: 100%;
 
   &__item {
     display: none;
     z-index: 10;
     position: absolute;
-    width: $popover-width;
+    width: 100%;
     background: $white;
     box-shadow: 0 0 8px -2px rgba($black, 0.3);
     padding: 1.25em;
     top: 100%;
     left: 50%;
     transform: translate(-50%, $arrow-height);
+
+    @include media-breakpoint-up(sm) {
+      width: $popover-width;
+    }
+
     @include media-breakpoint-up(md) {
       top: 50%;
       left: 100%;
       transform: translate($arrow-height, -50%);
     }
   }
+
   &__header {
     display: flex;
     align-items: center;
     @extend .msds-text-header-4;
+
     .msds-icon {
       width: 32px;
       height: 32px;
     }
   }
+
   &__description {
     @extend .msds-text-body-2;
   }
+
   &:hover &__item {
     display: block;
   }
+
   &__arrow {
     position: absolute;
     overflow: hidden;
@@ -78,28 +89,33 @@ $arrow-size: 20px;
       }
     }
   }
+
   &--top &__item {
     top: auto;
     bottom: 100%;
     left: 50%;
     transform: translate(-50%, -$arrow-height);
   }
+
   &--top &__arrow {
     top: 100%;
     width: $arrow-width;
     height: $arrow-height;
     left: 50%;
     transform: translateX(-50%);
+
     &::after {
       top: 0;
       left: 50%;
     }
   }
+
   &--bottom &__item {
     top: 100%;
     left: 50%;
     transform: translate(-50%, $arrow-height);
   }
+
   &--bottom &__arrow {
     height: $arrow-height;
     width: $arrow-width;
@@ -107,6 +123,7 @@ $arrow-size: 20px;
     left: 50%;
     top: auto;
     transform: translateX(-50%);
+
     &::after {
       content: '';
       position: absolute;
@@ -119,6 +136,7 @@ $arrow-size: 20px;
       transform: translateX(-50%) translateY(-50%) rotate(45deg);
     }
   }
+
   &--right &__item {
     top: 50%;
     left: 100%;
@@ -140,12 +158,14 @@ $arrow-size: 20px;
       left: 100%;
     }
   }
+
   &--left &__item {
     left: auto;
     top: 50%;
     right: 100%;
     transform: translate(-$arrow-height, -50%);
   }
+
   &--left &__arrow {
     width: $arrow-height;
     height: $arrow-width;
@@ -154,6 +174,7 @@ $arrow-size: 20px;
     top: 50%;
     transform: translateY(-50%);
     overflow: hidden;
+
     &::after {
       top: 50%;
       left: 0;
